<resources>
    <string name="app_name">Weather</string>
    <string name="search">Город</string>
    <string name="search_button">Найти</string>
    <string name="list_forecast">Condition</string>
    <string name="temp">temp</string>
    <string name="wind">wind</string>
    <string name="date">Date</string>
    <string name="temp_c">temp\n %1$s \u2103</string>
    <string name="wind_kph">wind\n %1$s kph</string>
    <string name="humidity">humidity\n %1$s%% </string>
</resources>